api v2 test services implementation